force-app/main/default/objects/Budget_Performance__c/Budget_Performance__c.object-meta.xml
<CustomObject>
    <label>Budget Performance</label>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Budget Performance  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>