force-app/main/default/objects/Budget_Performance__c/fields/Actual_Budget_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Actual_Budget_Ratio__c</fullName>
    <label>Actual/ Budget Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>