force-app/main/default/objects/Budget_Performance__c/fields/Actual_Expenditure_GBP__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenditure_GBP__c</fullName>
    <label>Actual Expenditure (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>