force-app/main/default/objects/Budget_Performance__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Budget Performances</relationshipLabel>
    <relationshipName>Budget_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>